# wind-chime-player

./: .gitignore  Android前端动画设计规范.md  BUILD.md  BUILD.yml  CACHE-OPTIMIZATION-GUIDE.md  CACHE-OPTIMIZATION-简明指南.md  CHANGELOG-v0.4.1-MULTI-PLATFORM.md  CHANGELOG.md  CLEANUP-QUICK-START.md  CURVED-LYRICS-FEATURE.md  CURVED-LYRICS-FINAL-FIX.md  CURVED-LYRICS-FIXES.md  CURVED-LYRICS-UI-UPDATE.md  FBM-WAVE-IMPLEMENTATION.md  GIT-COMMANDS-v0.4.0.1.md  LICENSE  LINTER-ERRORS-SUMMARY.md  QUICK-START-MULTI-PLATFORM.md  README.md  RELEASE_v0.4.1.md  RELEASE_v0.5.0.md  WEBDAV-DEBUG-PLAN.md  WEBDAV-PROGRESSIVE-DOWNLOAD-IMPLEMENTATION.md  WEBDAV-中文路径修复说明.md  WindChime-Android-开发手册.md  cleanup-phase1.sh  cleanup-phase3-allow-dead-code.sh  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tatus --porcelain  tsconfig.json  vite.config.ts  多平台打包配置完成.md  如何构建macOS和Linux.md  对话.md  黑胶唱片模式-更新说明.md
docs/: 2025-10-04-主题系统修复总结.md  BUILD-MULTI-PLATFORM.md  CHANGELOG-WebDAV.md  CHANGELOG-v0.4.0.1.md  FEATURE-INTEGRATION-SUMMARY.md  LrcApi集成完成报告.md  MULTI-PLATFORM-SETUP-COMPLETE.md  P0-DEEP-VERIFICATION.md  P0-ERROR-ANALYSIS.md  P0-complex-refactoring-guide.md  QUICK-START-NEW-SETTINGS.md  README-THEME-SYSTEM.md  README更新-艺术家封面系统-20251006.md  Seek-测试指南.md  Seek后歌词显示为空-修复-20251006.md  Tab按钮样式修复说明.md  WEBDAV开发后必须看.md  Web-Audio-Player-实现完成.md  WebDAV-README.md  WebDAV-上线完成报告.md  WebDAV-上线指南.md  WebDAV-开发说明.md  all-fixes-summary-2025-10-04.md  critical-bug-fix-2025-10-04.md  final-fixes-2025-10-04.md  macOS风格配色升级-20251006.md  manual-cleanup-guide.md  playlist-system-hotfix.md  repo-manual-snapshot.md  rust-dead-code-cleanup-plan.md  settings-ui-refactor-complete.md  settings-ui-refactor-guide.md  sidebar-playlist-refactor.md  下一首-Seek修复-20251006.md  专辑封面提取优化.md  专辑视图优化-性能和视觉改进-20251006.md  专辑视图全屏优化-20251006.md  专辑视图最终调整-20251006.md  专辑视图现代化升级-20251006.md  专辑视图美化升级-参考现代音乐应用-20251006.md  (+64 more)
scripts/: build-all-platforms.ps1  build-all-platforms.sh
src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  temp_webdav.tsx
src-tauri/capabilities/: default.json
src-tauri/src/: audio_enhancement.rs  db.rs  lib.rs  library.rs  lyrics.rs  main.rs  metadata_extractor.rs  network_api.rs  play_history.rs  player.rs  player_adapter.rs
src-tauri/src/cache/: config.rs  lru.rs  manager.rs  mod.rs  progressive.rs  stats.rs
src-tauri/src/config/: mod.rs  sync_config.rs  types.rs  webdav_config.rs
src-tauri/src/ftp/: client.rs  mod.rs  types.rs
src-tauri/src/music_source/: manager.rs  mod.rs  provider.rs  types.rs
src-tauri/src/player/: core.rs  mod.rs
src-tauri/src/player/actors/: audio_actor.rs  mod.rs  playback_actor.rs  playback_webdav_simple.rs.txt  playlist_actor.rs  preload_actor.rs  state_actor.rs
src-tauri/src/player/audio/: arc_source.rs  decoder.rs  device.rs  mod.rs  sink_pool.rs  stream.rs  symphonia_decoder.rs
src-tauri/src/player/types/: commands.rs  errors.rs  events.rs  mod.rs  state.rs  track.rs
src-tauri/src/playlist/: exporter.rs  importer.rs  manager.rs  mod.rs  smart_playlist.rs  types.rs
src-tauri/src/remote_source/: client_manager.rs  mod.rs  scanner.rs  types.rs
src-tauri/src/streaming/: mod.rs  simple_http_reader.rs  webdav_reader.rs
src-tauri/src/webdav/: auth.rs  client.rs  mod.rs  remote_adapter.rs  resilient_client.rs  safe_stream.rs  types.rs  xml_parser.rs
website/: .npmrc  DEPLOYMENT.md  README.md  (+6 more)
(+159 files in other folders)
