[package]
name = "windchime"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "windchime_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio dependencies
symphonia = { version = "0.5", features = ["all-formats", "all-codecs"] }
rodio = { version = "0.19", features = ["flac", "wav", "vorbis", "mp3", "symphonia-all"] }
cpal = "0.15"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Threading and async
crossbeam-channel = "0.5"
tokio = { version = "1", features = ["full"] }

# Metadata reading
lofty = "0.21"

# Utilities
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
regex = "1.10"
encoding_rs = "0.8"

