[package]
name = "windchime"
version = "0.4.0"
description = "现代化音乐播放器 - Modern Music Player"
authors = ["Wind"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "windchime_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio dependencies
symphonia = { version = "0.5", features = ["all-formats", "all-codecs"] }
rodio = { version = "0.19", features = ["flac", "wav", "vorbis", "mp3", "symphonia-all"] }
cpal = "0.15"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Threading and async
crossbeam-channel = "0.5"
tokio = { version = "1", features = ["full"] }

# Metadata reading
lofty = "0.21"

# HTTP和WebDAV
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }
http = "0.2"
url = "2.4"
bytes = "1.5"

# 异步和并发增强
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"

# 缓存和数据结构
lru = "0.12"
serde-xml-rs = "0.6"
quick-xml = "0.31"  # 高性能XML解析（用于WebDAV）
uuid = { version = "1.6", features = ["v4"] }  # UUID生成

# 加密和安全
base64 = "0.21"
md5 = "0.7"
zeroize = { version = "1.7", features = ["derive"] }
secrecy = { version = "0.8", features = ["serde"] }

# 异步trait支持
async-trait = "0.1"

# 懒加载静态变量
once_cell = "1.19"

# 错误处理增强
thiserror = "1.0"

# 时间处理
chrono = { version = "0.4", features = ["serde", "clock"] }

# 系统目录访问
dirs = "5.0"

# Utilities
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
regex = "1.10"
encoding_rs = "0.8"
parking_lot = "0.12"
rand = "0.8"

# 系统资源监控
sysinfo = "0.30"







